<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFA0"
    tools:context=".Register">


    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/PlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText   android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/DOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton    android:onClick="setDate"
            android:src="@drawable/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText   android:id="@+id/edDOB"
            android:editable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/PhoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText   android:id="@+id/edPhoneNum"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText   android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edEmail"
        android:layout_toRightOf="@+id/edEmail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:onClick="reset"
            android:layout_margin="10dp"
            android:text="@string/Reset"
            android:layout_weight="1"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:onClick="save"
            android:layout_margin="10dp"
            android:text="@string/Save"
            android:background="#00FF00"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>