<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFA0"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:src="@drawable/images" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="#00FF00"
            android:drawableLeft= "@drawable/start"
            android:text="@string/Start"
            android:onClick="onClick" />

        <Button android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="#FF0000"
            android:drawableLeft= "@drawable/register"
            android:textColor="#FFFFFF"
            android:text="@string/Register"
            android:onClick="onClick" />

    </LinearLayout>


    <Button android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#707070"
        android:drawableLeft= "@drawable/history"
        android:textColor="#00FF00"
        android:text="@string/History"
        android:onClick="onClick" />

    <Button android:id="@+id/btnPercentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#FF00FF"
        android:drawableLeft= "@drawable/percentage"
        android:textColor="#FFFFFF"
        android:text="@string/Statistical"
        android:onClick="onClick" />

    <TextView   android:id="@+id/tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>